app/assets/stylesheets/commonwealth-vlr-engine/show.scss
.show-document {

  #flagged_warning {
    #flagged_warning_text {
      padding: 15px 30px;

      div {
        margin-bottom: 20px;
      }
    }
  }

  .pagination-search-widgets {
    padding: 0;

    .card-body {
      padding: 5px;

      .page-links {
        padding: 2px 0 0 0;
      }

      .search-widgets {
        float: right;

        @media (max-width: breakpoint-max(sm)) {
          float: none;
        }
      }
    }

    @media (max-width: breakpoint-max(sm)) {
      text-align: center;
    }

  }

  #item_breadcrumb {
    font-size: $font-size-xs;
    color: $light_gray;
    margin-bottom: 10px;

    a {
      color: $dark_gray;

      &:hover {
        color:$bl_link;
        text-decoration: none;
      }
    }

    .item-breadcrumb-separator {
      margin: 0 .5em;
      opacity: 0.17;
    }

  }

  #img_show_container {
    text-align: center;
    margin-bottom: 1em;

    #img_show_canvas {
      display: inline-block;
      position: relative;
      max-width: 100%;

      #img_show_zoom_cue {
        position: absolute;
        right: 10px;
        top: 10px;
        color: white;
        border-radius: 20px;
        background-color: rgba(0, 0, 0, .2);
        box-shadow: 0 0 14px -4px #000000;

        .img_zoom_icon {
          font-size: 32px;
        }

      }

      #loading {
        position: relative;
        top: 150px;
      }

      .img_show {
        border: 1px solid $light_gray;
        width:auto;
        max-width:100%;
        max-height: 600px;
      }

    }

  }

  #img_viewer_modal {

    .modal-dialog {
      max-width: 98%;
      margin:10px auto;

      .modal-content {

        .modal-header {
          border-bottom: 0;
          padding: 3px 10px;
          text-align: left;
          height: 29px;
          overflow: hidden;

          .modal-title {
            font-size: $h6-font-size;
            font-weight: bold;
            width: 95%;
          }

        }

        #img_viewer_osd {
          background-color: $viewer_bg;
          margin: 0 5px;
          padding: 0;
          border: 1px solid $dark_gray;

          /* OSd navigator */
          .openseadragon-container > div.openseadragon-canvas + div + div {
            right: 3px !important;
            top: 3px !important;
          }

          /* OSd controls */
          .openseadragon-container > div.openseadragon-canvas + div + div + div {
            right: 3px !important;
            padding: 1px 1px 0 !important;
            border-radius: 5px 5px 0 0;
            background: rgb(17, 17, 17) !important; /* fallback for browsers w/o RGBa support */
            background: rgba(17, 17, 17, 0.4) !important;
            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#66111111, endColorstr=#66111111); /* for IE 5.5-7 */
            -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#66111111, endColorstr=#66111111)"; /* for IE8 */
          }

        }

        .modal-footer {
          border-top: 0;
          padding: 2px;
        }

      }

    }

  }

  #multi_img_show_container {

    #page_sequence_wrapper {
      margin-bottom: 15px;
      text-align: left;
      @include card-esque(3px 7px 2px 7px);

      #page_sequence {
        color: $dark_gray;
        font-size: $font-size-xs;

        #page_sequence_pagination {
          display: inline;
          float: right;

          a {
            margin-left: 10px;
          }

        }

      }

    }

    #thumbnail_list_wrapper {
      @include card-esque(10px);

      #thumbnail_list {
        max-height: 600px;
        min-height: 200px;
        overflow-y: auto;
        margin-bottom: 0;
        text-align: center;
        -webkit-overflow-scrolling: touch;
        display: block;
        position: relative;

        li {
          padding-bottom: 15px;

          a {

            img {
              border: 1px solid $light_gray;
              max-width: 94%;
              max-height: 180px;
            }

            &.in_viewer {

              img {
                border: 4px solid $darker_gray;
                box-shadow: $popover-box-shadow;
              }

            }

          }

        }

      }

    }

    #multi_img_pane {
      margin-bottom: 20px;

      .carousel-control-icon {
        font-size: $h5-font-size;
        font-weight: bold;
        background-color: $very_dark_gray;
        border: 2px solid white;
        opacity: 0.4;
        height: 30px;
        width: 30px;
        line-height: 26px;

        &.next_icon {
          padding-left: 2px;
        }

      }

    }

  }

  #audio_show_container {
    text-align: center;
    margin-bottom: 2em;
    margin-top: 2em;

    #audio_show_canvas {
      display: inline-block;
      position: relative;
      max-width: 100%;
      @include rounded-corners(10px);
      background-color: $lighter_gray;
      border: $card-border-width solid $dark_gray;
      padding: 10px;

      #audio_player {
        width: 700px;
      }

      #audio_playlist {
        list-style-type: none;
        padding: 0 5px;
        margin-bottom: 0;

        li {
          text-align: left;
          padding: 5px;
        }

        li.active {
          background-color: $light_gray;

          a {
            color: $very_dark_gray;
          }
        }
      }
    }
  }

  #pdf_show_container {
    text-align: center;
    margin-bottom: 2em;
    margin-top: 2em;

    #pdf_show_canvas {
      max-width: 100%;

      #pdf_viewer {
        width: 90%;
        height: 800px;
        border: $card-border-width solid $dark_gray;

        @media (max-width: breakpoint-max(sm)) {
          height: 550px;
        }
      }
    }
  }

  #show_info_wrapper {
    display: block;

    #thumbnail_wrapper {
      float: right;
      margin-bottom: 1em;
      //order: 2;

      #thumb_img_show_container {
        text-align: center;
        @include card-esque(5px);

        .thumb_img_show {
          border: 1px solid $light_gray;
          max-width:100%;
          max-height: 300px;
        }

      }

      #oai_item_link {

        a {
          font-weight: bold;
          color: $very_dark_gray;

          &:hover {
            color: $bl_link;
            text-decoration: none;
          }
        }

      }

      #book_actions_links_wrap {
        bottom: 0;
        position: absolute;
        width: 88%;

        a {
          color: $very_light_gray;
          background: none repeat scroll 0 0 rgba(0, 0, 0, 0.60);
          padding: 0 5px;
          margin-bottom: 2px;
        }

      }

    }

    #metadata_mlt_wrapper {
      float: left;
      // order: 1;

      /* metadata */
      #item_metadata {
        margin-bottom: 20px;
        font-size: $font-size-sm;

        h3 {
          font-size: $h4-font-size;
        }

        dl.document-metadata {

          dt {
            text-align: right;
            padding-right: 0;
            padding-left: 0;

            @media (max-width: breakpoint-max(sm)) {
              text-align: left;
              padding-left: 15px;
            }
          }

          dd {

            .metadata_breadcrumb {
              color: $dark_gray;
              padding: 0 2px;
            }

            .uri_metadata_link {
              word-wrap: break-word;
              word-break: break-word;
            }

          }

        }

        #metadata_expand_heading {
          font-weight: normal;
        }

        #mods_link_wrapper {
          float: right;

          a {
            color:$dark_gray;
          }
        }

        @media (min-width: breakpoint-min(xl)) {
          font-size: $font-size-base;
        }

      }

      #more_like_this {
        @include card-esque($card-spacer-x);

        @media (max-width: breakpoint-max(sm)) {
          margin-bottom: 20px;
        }

        h4 {
          font-size: $h5-font-size;
        }

        #more_like_this_docs {

          .more_like_this_document {
            height: fit-content;

            img {
              max-width: 100%;
              height: auto;
              display: block;
              border: 1px solid $lighter_gray;
            }

            .mlt_title_link {
              position: absolute;
              top: 0;
              font-size: $font-size-xs;
              bottom: 0;
              width: 85%;
              padding: 5px;
              background: $dark_gray;
              visibility: hidden;
              color: #FFFFFF;
              opacity: 0;
              transition: opacity 0.3s ease;

              &:hover {
                text-decoration: none;
              }

            }

            &:hover .mlt_title_link {
              visibility: visible;
              opacity: .9;
            }

            @media (max-width: breakpoint-max(sm)) {
              margin-bottom: 10px;
            }

          }

        }

        #more_mlt_link_wrapper {
          text-align: right;
          margin-top: 7px;

          a {
            color: $dark_gray;
          }

        }

      }

    }

    #sidebar {
      float: left;
      // order: 3;

      div.show-tools {
        margin-bottom: 20px;

        ul.list-group {
          padding: .5rem 0;

          .list-group-item {
            border: none;
            padding: 0.3rem 1.25rem;

            &.iiif_manifest {

              #iiif-logo {
                height: 16px;
                width: 16px;
                vertical-align: text-top;
              }

              #iiif_manifest_info_icon {
                position: absolute;
                top: 10px;
                padding-left: 5px;
                color: $dark_gray;
              }

            }
          }

        }

        .show-tools-sharing-link:not(:active) {
          .fa-facebook-square {
            color: #1877f2;
          }
          .fa-pinterest-square {
            color: #e60023;
          }
          .fa-reddit-square {
            color: #ff4500;
          }
          .fa-tumblr-square {
            color: #35465c;
          }
        }

        .show-tools-sharing-icon {
          margin-right: 6px;
        }
      }

      #sidebar-downloads {
        margin-bottom: 20px;

        .card-body {
          padding: .5rem 1.25rem;

          li.download_list_item {
            width: 100%;

            a {
              padding: 10px 5px 0 0;
              word-wrap: break-word;
              word-break: break-word;
              display: block;
              line-height: 1rem;
              font-size: $font-size-sm;
            }

            .download_info {
              font-size: $font-size-xs;
              color: $dark_gray;
            }

          }
        }

      }

    }

  }

}

.mods_xml_display pre {
  padding: 15px;
  word-break: normal;
  font-size: $font-size-xs;
  white-space: pre-wrap;
}

.citation-content {
  margin-bottom: 20px;
}

